...
        fieldContent = viewModel.itemName.value,
        isEditable = true,
        onTextChanged = { viewModel.onItemNameChanged(it) },
        placeholder = "e.g. Bluetooth earbuds",
        isError = viewModel.nameError.value.isNotEmpty(),
        leadingIcon = Icons.Outlined.Edit,
        testTag = "NameInput"
    )

    CustomErrorText(
        text = viewModel.nameError.value
    )
}
...
            testTag = "SubCategoryInput"
        )


    } else {
        Box(
            modifier = Modifier.testTag("SubCategoryDropdown")
        ) {
            CustomDropdownMenu(
                items = viewModel.selectedCategory!!.subCategories,
                selectedText = viewModel.selectedSubCategory,   // will be changed when new option is selectedisError = viewModel.subCategoryError.value.isNotEmpty()
                isError = viewModel.subCategoryError.value.isNotEmpty()
            )
...
        fieldContent = viewModel.itemBrand.value,
        isEditable = true,
        onTextChanged = { viewModel.onItemBrandChanged(it) },
        placeholder = "What is the brand of your item?",
        leadingIcon = Icons.Outlined.Title,
        isError = false, // wont have error
        testTag = "BrandInput"
    )
}

@OptIn(ExperimentalMaterial3Api::class)
@Composable
fun DateAndTime(
...
    CustomDatePickerTextField(
        selectedDate = viewModel.selectedDate,
        isDialogShown = viewModel.isDateDialogShown,
        placeholder = "Select a date...",
        isError = viewModel.dateError.value.isNotEmpty(),
        datePickerTitle = "Date of lost item",
        testTag = "DateInput",
    )

    CustomErrorText(text = viewModel.dateError.value)

    CustomTimePickerTextField(
        selectedHour = viewModel.selectedHour,
        selectedMinute = viewModel.selectedMinute,
        isDialogShown = viewModel.isTimeDialogShown,
        placeholder = "Select a time...",
        isError = viewModel.timeError.value.isNotEmpty(),
        testTag = "TimeInput"
    )

    CustomErrorText(text = viewModel.timeError.value)

}

...

    Box(
        modifier = Modifier.fillMaxWidth(),
        contentAlignment = Alignment.Center
    ) {
        CustomButton(
            text = "Done",
            type = ButtonType.FILLED,
            enabled = !isLoading,  // if loading, disable the button
            onClick = {
                // check if the input fields are valid
                if (!viewModel.validateInput()) {
                    return@CustomButton
...
