...
                // close the dialog
                isDialogShown.value = false
            },

            confirmButton = {
                CustomButton(
                    text = "Select",
                    type = ButtonType.FILLED,
                    onClick = {
                        // get the current epoch time
                        val currentEpoch = DateTimeManager.getCurrentEpochDate() * 1000

                        // get the epoch time
...
