...

            if (viewModel.lostItemData.status == 0) {
                Column(
                    horizontalAlignment = Alignment.CenterHorizontally
                ) {
                    CustomButton(
                        text = "Claim this Item",
                        type = ButtonType.FILLED,
                        enabled = !isLoading,  // if loading, disable the button
                        onClick = {
                            isLoading = true

                            // if there is a security question for the found item, prompt the user to enter it
...
                    content = viewModel.foundItemData.securityQuestion,
                    inputText = viewModel.securityQuestionAnswerFromUser,
                    isDialogShown = viewModel.isSecurityQuestionDialogShown,
                    inputPlaceholder = "Your answer...",
                    confirmButton = {
                        CustomButton(
                            text = "Claim",
                            type = ButtonType.FILLED,
                            onClick = {
                                // validate input
                                if (!viewModel.validateSecurityQuestionInput()) {
                                    return@CustomButton
                                }
...
                                // stop loading
                                isLoading = false
                            }
                        )
                    },
                    errorMessage = viewModel.securityQuestionInputError,
                    testTag = "SecurityQuestionInput"

                )
            } else if (viewModel.claim.foundItemID == viewModel.foundItemData.itemID) {
                Text(
                    text = "You have already claimed this item.",
                    style = Typography.bodyMedium,
...
